# Rash_App

./: .gitignore
rashoti-backend/: Cargo.toml
rashoti-backend/migrations/: 20250707010718_create_users_tables.sql
rashoti-backend/src/: lib.rs  main.rs  main_one.rs
rashoti-backend/src/auth/: jwt.rs
rashoti-backend/src/config/: settings.rs
rashoti-backend/src/handlers/: auth.rs  health.rs
rashoti-backend/src/middleware/: auth.rs
rashoti-backend/src/models/: user.rs
rashoti-backend/src/routes/: courses.rs  login.rs
rashoti-backend/src/services/: auth_service.rs
rashoti-backend/src/utils/: errors.rs
rashoti_app/: README.md  pubspec.yaml
rashoti_app/android/app/: build.gradle.kts
rashoti_app/ios/Runner/: Info.plist
rashoti_app/ios/Runner.xcodeproj/: project.pbxproj
rashoti_app/lib/: main.dart
rashoti_app/lib/models/: course.dart  dashboard_data.dart  user.dart
rashoti_app/lib/providers/: auth_provider.dart  dashboard_provider.dart
rashoti_app/lib/routes/: app_router.dart
rashoti_app/lib/screens/auth/: login_screen.dart  register_screen.dart
rashoti_app/lib/screens/dashboards/: parent_dashboard.dart  student_dashboard.dart  teacher_dashboard.dart
rashoti_app/lib/utils/: colors.dart  constants.dart
rashoti_app/linux/: CMakeLists.txt
rashoti_app/linux/runner/: my_application.cc
rashoti_app/macos/Runner.xcodeproj/: project.pbxproj
rashoti_app/test/: widget_test.dart
rashoti_app/web/: index.html  manifest.json
rashoti_app/windows/: CMakeLists.txt
rashoti_app/windows/runner/: Runner.rc  main.cpp
(+10 files in other folders)
